Fix horizontal scrollbar

--- a/nookdata.scss
+++ b/nookdata.scss
@@ -136,6 +136,7 @@ $cursor-modes: (
 /* width */
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
     &-track {
         background-color: transparent;
     }
